# exegesis

./: .gitignore  .hemingway.db  AGENTS.md  Baseline.md  CLAUDE.md  PROCESS.md  README.md  RESOURCES.md  TODO.md  pyproject.toml  runindex.sh
.claude/: settings.local.json
.claude/hooks/: session-start.sh
content/: index.md
content/NEH/: NEH_06_1-19.md
content/Topics/: Communion.md  Holy Ground.md  Human.md  Lampstand.md  Prayer.md  Shoes.md  Treaty.md  Wings.md
exegesis_tool/: __init__.py  __main__.py  cli.py  compiler.py  config.py  database.py  importer.py  models.py  orchestrator.py  perspectives.py  validator.py
exegesis_tool/prompts/: __init__.py  author.py  disciple.py  historian.py  linguist.py  shepherd.py  theologian.py
modules/: index.ts  localStorageDB.ts  types.ts  utils.ts
prompt/: 1.context.md  2.history-culture.md  3.linguistic.md  4.literary.md  5.theology.md  6.application.md  6.hermeneutic.md  7.application.md  AGENT.md  DONE.md  README.md  TODO.md  application.md  book_overview.md  chapter_overview.md  context.md  culture.md  full.md  general.md  history.md  language.md  literature.md  research.md  symbols.md
src/: HeroJourney.md
src/1_Chronicles/: cultural.md  historical.md  linguistic.md  literary.md  summary.md  theological.md
src/1_Corinthians/: cultural.md  historical.md  linguistic.md  literary.md  summary.md  theological.md
src/1_John/: cultural.md  (+5 more)
studies/: INDEX.md
tests/: __init__.py  test_database.py  test_importer.py
workbook/: cultural.md  historical.md  index.md  linguistic.md  literary.md  theological.md
(+687 files in other folders)
